@@ -13,7 +13,7 @@ public interface PipeClosure<T, P extends Pipe> {
      * @param parameters An array of parameters passed in from the host pipe. Implementation specifics determine what the types of the parameters are.
      * @return the result of computing a function on the parameters
      */
-    public T compute(final Object... parameters);
+    public T compute(Object... parameters);
 
     /**
      * The host pipe for which the PipeClosure is closing.
@@ -21,5 +21,5 @@ public interface PipeClosure<T, P extends Pipe> {
      *
      * @param hostPipe the host pipe
      */
-    public void setPipe(final P hostPipe);
+    public void setPipe(P hostPipe);
 }
