@@ -3,6 +3,7 @@ package com.tinkerpop.pipes.branch;
 import com.tinkerpop.pipes.AbstractPipe;
 import com.tinkerpop.pipes.Pipe;
 import com.tinkerpop.pipes.util.MetaPipe;
+import com.tinkerpop.pipes.util.PipeHelper;
 
 import java.util.List;
 import java.util.NoSuchElementException;
@@ -53,8 +54,6 @@ public class FairMergePipe<E> extends AbstractPipe<E, E> implements MetaPipe {
     }
 
     public String toString() {
-        return super.toString() + "[" + this.pipes + "]";
+        return PipeHelper.makePipeString(this, this.pipes);
     }
-
-
 }
