@@ -27,6 +27,6 @@ public class IdFilterPipe extends AbstractPipe<Element, Element> implements Filt
     }
 
     public String toString() {
-        return super.toString() + "(" + this.filter + "," + this.id + ")";
+        return PipeHelper.makePipeString(this, this.filter, this.id);
     }
 }
